# kanban

./: .dockerignore  .gitignore  Dockerfile  README.md
backend/: ai.py  db.py  main.py  pyproject.toml
backend/static/: index.html
backend/tests/: test_ai.py  test_ai_api.py  test_app.py  test_board_api.py  test_db.py
docs/: AI_STRUCTURED_OUTPUT.md  DATABASE.md  PLAN.md
frontend/: AGENTS.md
frontend/src/app/: page.test.tsx  page.tsx
frontend/src/components/: KanbanBoard.tsx
frontend/tests/: kanban.spec.ts
scripts/: start-mac.sh  start-windows.bat  stop-linux.sh  stop-windows.bat  verify-phase3-mac.sh
