[project]
name = "pm-backend"
version = "0.1.0"
description = "FastAPI backend for PM MVP"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.121.0",
  "httpx>=0.28.1",
  "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
  "pytest>=8.4.2",
  "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
